--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     font-family: 'Outfit', sans-serif;
 }
 
-.card {
+main {
     width: 320px;
     padding: 18px;
     border-radius: 20px;
@@ -27,7 +27,7 @@ body {
     box-shadow: 0px, 3px, 25px;
 }
 
-.card img {
+main img {
     max-width: 100%;
     border-radius: 10px;
 }
