--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
     padding: 18px;
     border-radius: 20px;
     background-color: white;
-    box-shadow: 0px, 3px, 25px;
+    box-shadow: 0px 3px 25px;
 }
 
 main img {
